# TritonSendBufferTest

./: .gitignore  README.md
backend/: CMakeLists.txt  README.md
backend/src/: minimal.cc
client/: CMakeLists.txt  PythonClient.py  README.md
client/src/: main.cpp
model_repo/triton-minimal-backend/: config.pbtxt
